plugins/InspectionGadgets/test/com/siyeh/igtest/style/unnecessary_constructor/UnnecessaryConstructor.java
public class UnnecessaryConstructor {
  <warning descr="No-arg constructor 'public UnnecessaryConstructor() { super (); }' is redundant">public UnnecessaryConstructor() {
    super ();
  }</warning>
}
class A {
  <error descr="Identifier expected">void</error> () {}
}

enum En {
  EnC;
  <warning descr="No-arg constructor 'private En() {}' is redundant">private En() {}</warning>
}